# RestFullAPI/ExpAPI/backend/src/swagger-output.json
@@ -13,6 +13,9 @@
   "paths": {
     "/v1/produto/": {
       "get": {
+        "tags": [
+          "Produto"
+        ],
         "description": "",
         "parameters": [
           {
@@ -33,6 +36,9 @@
         }
       },
       "post": {
+        "tags": [
+          "Produto"
+        ],
         "description": "",
         "parameters": [
           {
@@ -57,6 +63,9 @@
     },
     "/v1/produto/{id}": {
       "get": {
+        "tags": [
+          "Produto"
+        ],
         "description": "",
         "parameters": [
           {
@@ -73,6 +82,9 @@
         }
       },
       "put": {
+        "tags": [
+          "Produto"
+        ],
         "description": "",
         "parameters": [
           {
@@ -89,6 +101,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Produto"
+        ],
         "description": "",
         "parameters": [
           {
@@ -107,6 +122,9 @@
     },
     "/v1/language/": {
       "post": {
+        "tags": [
+          "Language"
+        ],
         "description": "",
         "parameters": [
           {
@@ -131,6 +149,9 @@
     },
     "/v1/usuario/": {
       "get": {
+        "tags": [
+          "Usuario"
+        ],
         "description": "",
         "responses": {
           "default": {
@@ -139,6 +160,9 @@
         }
       },
       "post": {
+        "tags": [
+          "Usuario"
+        ],
         "description": "",
         "parameters": [
           {
@@ -156,6 +180,9 @@
     },
     "/v1/auth/login": {
       "post": {
+        "tags": [
+          "Auth"
+        ],
         "description": "",
         "responses": {
           "default": {
@@ -166,6 +193,9 @@
     },
     "/v1/auth/logout": {
       "post": {
+        "tags": [
+          "Auth"
+        ],
         "description": "",
         "responses": {
           "default": {
@@ -176,6 +206,9 @@
     },
     "/v1/auth/singup": {
       "post": {
+        "tags": [
+          "Auth"
+        ],
         "description": "",
         "responses": {
           "default": {
